# LLVM-pass-benchmarking

./: CMakeLists.txt  README.md  run_tests.sh
src/: CMakeLists.txt  benchmark.c  pass.cc  test_original.c  test_simple.c  test_temporaries.c
